// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Configure and manage security features like Security Groups, Rules, Certificates etc.
package security;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/labels/selector.proto";

import "tenant.proto";
import "sgpolicy.proto";
import "securitygroup.proto";
import "app.proto";
import "x509.proto";
import "networkencryption.proto";
import "fwprofile.proto";


// SecurityGroup REST API
service SecurityV1 {
 // Prefix for all resources served by this service.
 option (venice.apiPrefix) = "security";
 // API Version.
 option (venice.apiVersion) = "v1";

 option (venice.apiGrpcCrudService) = "SecurityGroup";
 option (venice.apiGrpcCrudService) = "NetworkSecurityPolicy";
 option (venice.apiGrpcCrudService) = "App";
 option (venice.apiGrpcCrudService) = "FirewallProfile";
 option (venice.apiGrpcCrudService) = "Certificate";
 option (venice.apiGrpcCrudService) = "TrafficEncryptionPolicy";

 option (venice.apiRestService) = {
   Object: "SecurityGroup"
   Method: [ "get", "put", "delete", "post", "list", "watch" ]
 };

 option (venice.apiRestService) = {
     Object: "NetworkSecurityPolicy"
     Method: [ "get", "put", "delete", "post", "list", "watch" ]
 };

 option (venice.apiRestService) = {
   Object: "App"
   Method: ["get", "put", "delete", "post", "list", "watch" ]
 };

 option (venice.apiRestService) = {
   Object: "FirewallProfile"
   Method: ["get", "put", "list", "watch" ]
 };
 
}
